# STIR-WHIRoverGR

./: .gitignore  CMakeLists.txt  README.md  fri_pcs_alignment_plan.md  fri_soundness_alignment_repair_plan.md  stir_over_gr_theorem_facing_todo.md  whir_over_gr_implementation_plan.md  whir_performance_optimization_plan.md
bench/: README.md  bench_batched_inv.cpp  bench_common.hpp  bench_fft3.cpp  bench_fold_table.cpp  bench_hash_backend.cpp  bench_merkle_open.cpp  bench_proof_size_estimate.cpp  bench_stir_query_solver.cpp  bench_time.cpp
bench/presets/: all_protocols_smoke_gr216_r54.json  ci_gr216_r54.json  fri.json  jia_micro_gr216_r162.json  main_benchmark_workload_for_proof_size_gr216_r162.json  main_benchmark_workload_gr216_r162.json  scale_gr216_r486.json  stir.json  two_round_stir_gr216_r486.json  whir.json
include/: domain.hpp  ldt.hpp  parameters.hpp  utils.hpp
include/algebra/: gr_context.hpp  gr_serialization.hpp  subgroup.hpp  teichmuller.hpp
include/crypto/: hash.hpp
include/crypto/fs/: transcript.hpp
include/crypto/merkle_tree/: merkle_tree.hpp  proof_planner.hpp
include/fri/: common.hpp  parameters.hpp  proof_size_estimator.hpp  prover.hpp  soundness.hpp  verifier.hpp
include/poly_utils/: bs08.hpp  degree_correction.hpp  fft3.hpp  folding.hpp  interpolation.hpp  polynomial.hpp  quotient.hpp
include/soundness/: configurator.hpp
include/stir/: common.hpp  parameters.hpp  proof_size_estimator.hpp  prover.hpp  soundness.hpp  verifier.hpp
include/whir/: common.hpp  constraint.hpp  folding.hpp  multilinear.hpp  multiquadratic.hpp  parameters.hpp  prover.hpp  soundness.hpp  verifier.hpp
notes/: stir_over_gr_theorem_facing_soundness.md
results/: README.md  main_benchmark_workload_gr216_r162_proof_size.csv  preset0_size.csv  preset0_time.csv  preset1_time.csv  run_todo6_fold_sweep.sh  run_todo7_fft3_sweep.sh  run_todo8_fft3_cache_sweep.sh  todo4_leaf_probe.cpp  todo4_leaf_probe_omp1.txt  todo4_leaf_probe_omp8.txt  todo4_leaf_probe_worker_local_omp1.txt  todo4_leaf_probe_worker_local_omp8.txt  todo4_ntl_research.md  todo6_fold_evidence.md  todo6_fold_n243_t1.csv  todo6_fold_n243_t8.csv  todo6_fold_n729_t1.csv  todo6_fold_n729_t8.csv  todo6_fold_summary.csv  todo6_time_t1.csv  todo6_time_t8.csv  todo7_fft3_encode_n243_t1.csv  todo7_fft3_encode_n243_t8.csv  todo7_fft3_encode_n729_t1.csv  todo7_fft3_encode_n729_t8.csv  todo7_fft3_evidence.md  todo7_fft3_interpolate_n243_t1.csv  todo7_fft3_interpolate_n243_t8.csv  todo7_fft3_interpolate_n729_t1.csv  todo7_fft3_interpolate_n729_t8.csv  todo7_fft3_summary.csv  todo7_time_t1.csv  todo7_time_t8.csv  todo8_fft3_cache_summary.csv  todo8_fft3_encode_n243_t1.csv  todo8_fft3_encode_n243_t8.csv  todo8_fft3_encode_n729_t1.csv  todo8_fft3_encode_n729_t8.csv  todo8_fft3_interpolate_n243_t1.csv  (+8 more)
results/merkle_evidence/: TODO2_merkle_parallel_evidence.md  merkle_thread_scaling_summary.csv  run_merkle_thread_sweep.sh
results/merkle_evidence/raw/: large_t1.csv  large_t2.csv  large_t4.csv  large_t8.csv  small_t1.csv  small_t2.csv  small_t4.csv  small_t8.csv
scripts/: plot_bench_results.py  run_bench_size.sh  run_bench_time.sh  run_benchmark_parameter_search.sh  run_proof_size_estimator_from_preset.sh  run_search.sh  run_timing_benchmark_from_preset.sh  search_benchmark_parameters.py
scripts/bench/: plot_metric.py  run_bench.sh  search_params.py
src/: domain.cpp  ldt.cpp  parameters.cpp  utils.cpp
src/algebra/: gr_context.cpp  gr_serialization.cpp  subgroup.cpp  teichmuller.cpp
src/crypto/: hash.cpp
src/crypto/fs/: transcript.cpp
src/crypto/merkle_tree/: merkle_tree.cpp  proof_planner.cpp
src/fri/: common.cpp  parameters.cpp  proof_size_estimator.cpp  prover.cpp  soundness.cpp  verifier.cpp
src/poly_utils/: bs08.cpp  degree_correction.cpp  fft3.cpp  folding.cpp  interpolation.cpp  polynomial.cpp  quotient.cpp
src/soundness/: configurator.cpp
src/stir/: common.cpp  parameters.cpp  proof_size_estimator.cpp  prover.cpp  soundness.cpp  verifier.cpp
src/whir/: common.cpp  constraint.cpp  folding.cpp  multiquadratic.cpp  parameters.cpp  prover.cpp  soundness.cpp  verifier.cpp
tests/: test_common.hpp  test_crypto.cpp  test_domain.cpp  test_fft3.cpp  test_folding.cpp  test_fri.cpp  test_gr_basic.cpp  test_soundness_configurator.cpp  test_stir.cpp  test_whir.cpp  test_whir_constraint.cpp  test_whir_folding.cpp  test_whir_multilinear.cpp  test_whir_multiquadratic.cpp  test_whir_roundtrip.cpp  test_whir_soundness.cpp
